# static_container

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  meson.build  readme.md
.github/workflows/: c-cpp.yml
include/: forward_iterator.h  memory.h  static_vector.h
tests/: forward_iterator_test.cpp  instance_counter.h  instance_counter_test.cpp  memory_test.cpp  static_vector_test.cpp  test_static_vector.cpp
